--- a/index.html
+++ b/index.html
@@ -19,13 +19,12 @@
 		</div>
 
 		<!-- navbar -->
-		<header class="sticky top-0 bg-dark text-light">
-			<nav class="flex items-center justify-between p-4">
-				<a href="">
-					<img class="logo" src="public/img/WhiteBeanLogo.svg" alt="logo" />
+		<header class="bg-slate-500 sticky top-0 text-light">
+			<nav class="flex items-center justify-between px-8 py-2">
+				<a href="#hero">
+					<img class="w-12" src="public/img/WhiteBeanLogo.svg" alt="logo" />
 				</a>
-				<ul class="flex gap-8 text-lg">
-          <!-- TODO: Fix the headings being blocked by the sticky navbar -->
+				<ul class="flex gap-12 text-lg font-bold">
 					<li><a href="#about">About</a></li>
 					<li><a href="#projects">Projects</a></li>
 					<li><a href="#contact">Contact</a></li>
@@ -33,10 +32,10 @@
 			</nav>
 		</header>
 
-		<main>
-			<!-- about -->
-			<h2 class="py-8 text-center text-3xl" id="about">About</h2>
-			<div class="bg-dark text-light">
+		<!-- about -->
+		<section class="scroll-my-16" id="about">
+			<h2 class="py-16 text-center text-3xl font-bold">About</h2>
+			<div class="bg-dark text-light px-48 py-4">
 				<div class="flex justify-around text-2xl">
 					<h3>Frontend Developer</h3>
 					<h3>Backend Developer</h3>
@@ -59,73 +58,76 @@
 					</div>
 				</div>
 			</div>
+		</section>
 
-			<!-- projects -->
-			<h2 class="py-8 text-center text-3xl" id="projects">Projects</h2>
+		<!-- projects -->
+		<section class="scroll-my-16" id="projects">
+			<h2 class="py-16 text-center text-3xl font-bold">Projects</h2>
 
-			<!-- salsa beats -->
-			<div class="grid grid-cols-[1fr_1fr] justify-items-center gap-4 bg-dark text-light">
-				<div class="h-96 w-96 flex-1 bg-light"></div>
-				<div class="flex-1">
-					<h3 class="text-2xl">Salsa Beats</h3>
-					<p>
-						Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus temporibus
-						recusandae numquam qui, at voluptatum explicabo quae accusantium autem nemo. Numquam
-						magnam nisi corrupti ipsa, aspernatur maiores aut? Aliquid, dolore!
-					</p>
-					<button class="border-black block border p-4">Live Demo</button>
-					<button class="border-black block border p-4">Github</button>
-				</div>
-			</div>
+			<div class="flex flex-col gap-8">
+        <!-- salsa beats -->
+        <div class="grid grid-cols-[1fr_1fr] justify-items-center gap-4 bg-dark text-light px-48 py-4">
+          <div class="h-96 w-96 flex-1 bg-light"></div>
+          <div class="flex-1">
+            <h3 class="text-2xl">Salsa Beats</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus temporibus
+              recusandae numquam qui, at voluptatum explicabo quae accusantium autem nemo. Numquam
+              magnam nisi corrupti ipsa, aspernatur maiores aut? Aliquid, dolore!
+            </p>
+            <button class="border-black block border p-4">Live Demo</button>
+            <button class="border-black block border p-4">Github</button>
+          </div>
+        </div>
+        <!-- restaurant pos -->
+        <div class="grid grid-cols-[1fr_1fr] justify-items-center gap-4 bg-dark text-light px-48 py-4">
+          <div class="flex-1">
+            <h3 class="text-2xl">Restaurant POS</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus temporibus
+              recusandae numquam qui, at voluptatum explicabo quae accusantium autem nemo. Numquam
+              magnam nisi corrupti ipsa, aspernatur maiores aut? Aliquid, dolore!
+            </p>
+            <button class="border-black block border p-4">Live Demo</button>
+            <button class="border-black block border p-4">Github</button>
+          </div>
+          <div class="h-96 w-96 flex-1 bg-light"></div>
+        </div>
+        <!-- Odin book -->
+        <div class="grid grid-cols-[1fr_1fr] justify-items-center gap-4 bg-dark text-light px-48 py-4">
+          <div class="h-96 w-96 flex-1 bg-light"></div>
+          <div class="flex-1">
+            <h3 class="text-2xl">Odin Book</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus temporibus
+              recusandae numquam qui, at voluptatum explicabo quae accusantium autem nemo. Numquam
+              magnam nisi corrupti ipsa, aspernatur maiores aut? Aliquid, dolore!
+            </p>
+            <button class="border-black block border p-4">Live Demo</button>
+            <button class="border-black block border p-4">Github</button>
+          </div>
+        </div>
+        <!-- Spanish Pronunciation -->
+        <div class="grid grid-cols-[1fr_1fr] justify-items-center gap-4 bg-dark text-light px-48 py-4">
+          <div class="flex-1">
+            <h3 class="text-2xl">Spanish Pronunciation</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus temporibus
+              recusandae numquam qui, at voluptatum explicabo quae accusantium autem nemo. Numquam
+              magnam nisi corrupti ipsa, aspernatur maiores aut? Aliquid, dolore!
+            </p>
+            <button class="border-black block border p-4">Live Demo</button>
+            <button class="border-black block border p-4">Github</button>
+          </div>
+          <div class="h-96 w-96 flex-1 bg-light"></div>
+        </div>
+      </div>
+		</section>
 
-			<!-- restaurant pos -->
-			<div class="grid grid-cols-[1fr_1fr] justify-items-center gap-4 bg-dark text-light">
-				<div class="flex-1">
-					<h3 class="text-2xl">Restaurant POS</h3>
-					<p>
-						Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus temporibus
-						recusandae numquam qui, at voluptatum explicabo quae accusantium autem nemo. Numquam
-						magnam nisi corrupti ipsa, aspernatur maiores aut? Aliquid, dolore!
-					</p>
-					<button class="border-black block border p-4">Live Demo</button>
-					<button class="border-black block border p-4">Github</button>
-				</div>
-				<div class="h-96 w-96 flex-1 bg-light"></div>
-			</div>
-
-			<!-- Odin book -->
-			<div class="grid grid-cols-[1fr_1fr] justify-items-center gap-4 bg-dark text-light">
-				<div class="h-96 w-96 flex-1 bg-light"></div>
-				<div class="flex-1">
-					<h3 class="text-2xl">Odin Book</h3>
-					<p>
-						Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus temporibus
-						recusandae numquam qui, at voluptatum explicabo quae accusantium autem nemo. Numquam
-						magnam nisi corrupti ipsa, aspernatur maiores aut? Aliquid, dolore!
-					</p>
-					<button class="border-black block border p-4">Live Demo</button>
-					<button class="border-black block border p-4">Github</button>
-				</div>
-			</div>
-
-			<!-- Spanish Pronunciation -->
-			<div class="grid grid-cols-[1fr_1fr] justify-items-center gap-4 bg-dark text-light">
-				<div class="flex-1">
-					<h3 class="text-2xl">Spanish Pronunciation</h3>
-					<p>
-						Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus temporibus
-						recusandae numquam qui, at voluptatum explicabo quae accusantium autem nemo. Numquam
-						magnam nisi corrupti ipsa, aspernatur maiores aut? Aliquid, dolore!
-					</p>
-					<button class="border-black block border p-4">Live Demo</button>
-					<button class="border-black block border p-4">Github</button>
-				</div>
-				<div class="h-96 w-96 flex-1 bg-light"></div>
-			</div>
-
-			<!-- contact -->
-			<h2 class="py-8 text-center text-3xl" id="contact">Contact</h2>
-			<div class="w-full bg-dark text-light">
+		<!-- contact -->
+		<section class="scroll-my-16" id="contact">
+			<h2 class="py-16 text-center text-3xl font-bold">Contact</h2>
+			<div class="w-full bg-dark text-light px-48 py-4">
 				<p>Interested in working together? Send me a message!</p>
 				<form class="flex gap-4" action="">
 					<div>
@@ -146,10 +148,10 @@
 				</form>
 			</div>
 
-      <div class="flex justify-center">
-        <a href="#hero">Back to top</a>
-      </div>
-		</main>
+			<div class="flex justify-center">
+				<a href="#hero">Back to top</a>
+			</div>
+		</section>
 
 		<!-- footer -->
 		<footer class="flex flex-col text-center">
