--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 		<!-- about -->
 		<section class="scroll-my-16" id="about">
-			<h2 class="py-16 text-center text-3xl font-bold ">About</h2>
+			<h2 class="py-16 text-center text-3xl font-bold">About</h2>
 			<div class="flex justify-center bg-dark py-8 text-light">
 				<div class="max-w-6xl">
 					<div class="flex justify-around text-2xl">
@@ -76,8 +76,52 @@
 				<div class="flex justify-center bg-dark py-8 text-light">
 					<div class="grid max-w-6xl grid-cols-[1fr_1fr] justify-items-center gap-4">
 						<div class="h-96 w-96 flex-1 bg-light"></div>
-						<div class="flex-1">
+						<div class="flex flex-1 flex-col justify-around">
 							<h3 class="text-2xl">Salsa Beats</h3>
+							<p>
+								Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus temporibus
+								recusandae numquam qui, at voluptatum explicabo quae accusantium autem nemo. Numquam
+								magnam nisi corrupti ipsa, aspernatur maiores aut? Aliquid, dolore!
+							</p>
+							<div class="grid justify-start gap-2">
+								<button
+									class="rounded-full border-2 border-primary px-8 py-2 font-bold text-primary transition-all duration-100 ease-in hover:bg-primary hover:text-dark active:scale-95"
+								>
+									Live Demo
+								</button>
+								<button
+									class="rounded-full border-2 border-light px-8 py-2 font-bold text-light transition-all duration-150 ease-in hover:bg-light hover:text-dark active:scale-95"
+								>
+									Github
+								</button>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<!-- restaurant pos -->
+				<div class="flex justify-center bg-dark py-8 text-light">
+					<div class="grid max-w-6xl grid-cols-[1fr_1fr] justify-items-center gap-4">
+						<div class="flex-1">
+							<h3 class="text-2xl">Restaurant POS</h3>
+							<p>
+								Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus temporibus
+								recusandae numquam qui, at voluptatum explicabo quae accusantium autem nemo. Numquam
+								magnam nisi corrupti ipsa, aspernatur maiores aut? Aliquid, dolore!
+							</p>
+							<button class="border-black block border p-4">Live Demo</button>
+							<button class="border-black block border p-4">Github</button>
+						</div>
+						<div class="h-96 w-96 flex-1 bg-light"></div>
+					</div>
+				</div>
+
+				<!-- Odin book -->
+				<div class="flex justify-center bg-dark py-8 text-light">
+					<div class="grid max-w-6xl grid-cols-[1fr_1fr] justify-items-center gap-4">
+						<div class="h-96 w-96 flex-1 bg-light"></div>
+						<div class="flex-1">
+							<h3 class="text-2xl">Odin Book</h3>
 							<p>
 								Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus temporibus
 								recusandae numquam qui, at voluptatum explicabo quae accusantium autem nemo. Numquam
@@ -89,62 +133,22 @@
 					</div>
 				</div>
 
-				<!-- restaurant pos -->
-				<div class="flex justify-center bg-dark py-8 text-light">
-          <div
-            class="grid grid-cols-[1fr_1fr] justify-items-center gap-4 max-w-6xl"
-          >
-            <div class="flex-1">
-              <h3 class="text-2xl">Restaurant POS</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus temporibus
-                recusandae numquam qui, at voluptatum explicabo quae accusantium autem nemo. Numquam
-                magnam nisi corrupti ipsa, aspernatur maiores aut? Aliquid, dolore!
-              </p>
-              <button class="border-black block border p-4">Live Demo</button>
-              <button class="border-black block border p-4">Github</button>
-            </div>
-            <div class="h-96 w-96 flex-1 bg-light"></div>
-          </div>
-        </div>
-
-				<!-- Odin book -->
-				<div class="flex justify-center bg-dark py-8 text-light">
-          <div
-            class="grid grid-cols-[1fr_1fr] justify-items-center gap-4 max-w-6xl"
-          >
-            <div class="h-96 w-96 flex-1 bg-light"></div>
-            <div class="flex-1">
-              <h3 class="text-2xl">Odin Book</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus temporibus
-                recusandae numquam qui, at voluptatum explicabo quae accusantium autem nemo. Numquam
-                magnam nisi corrupti ipsa, aspernatur maiores aut? Aliquid, dolore!
-              </p>
-              <button class="border-black block border p-4">Live Demo</button>
-              <button class="border-black block border p-4">Github</button>
-            </div>
-          </div>
-        </div>
-
 				<!-- Spanish Pronunciation -->
 				<div class="flex justify-center bg-dark py-8 text-light">
-          <div
-            class="grid grid-cols-[1fr_1fr] justify-items-center gap-4 max-w-6xl"
-          >
-            <div class="flex-1">
-              <h3 class="text-2xl">Spanish Pronunciation</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus temporibus
-                recusandae numquam qui, at voluptatum explicabo quae accusantium autem nemo. Numquam
-                magnam nisi corrupti ipsa, aspernatur maiores aut? Aliquid, dolore!
-              </p>
-              <button class="border-black block border p-4">Live Demo</button>
-              <button class="border-black block border p-4">Github</button>
-            </div>
-            <div class="h-96 w-96 flex-1 bg-light"></div>
-          </div>
-        </div>
+					<div class="grid max-w-6xl grid-cols-[1fr_1fr] justify-items-center gap-4">
+						<div class="flex-1">
+							<h3 class="text-2xl">Spanish Pronunciation</h3>
+							<p>
+								Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus temporibus
+								recusandae numquam qui, at voluptatum explicabo quae accusantium autem nemo. Numquam
+								magnam nisi corrupti ipsa, aspernatur maiores aut? Aliquid, dolore!
+							</p>
+							<button class="border-black block border p-4">Live Demo</button>
+							<button class="border-black block border p-4">Github</button>
+						</div>
+						<div class="h-96 w-96 flex-1 bg-light"></div>
+					</div>
+				</div>
 			</div>
 		</section>
 
@@ -152,34 +156,34 @@
 		<section class="scroll-my-16" id="contact">
 			<h2 class="py-16 text-center text-3xl font-bold">Contact</h2>
 			<div class="flex justify-center bg-dark py-8 text-light">
-        <div class="max-w-6xl">
-          <p>Interested in working together? Send me a message!</p>
-          <form class="flex gap-4" action="">
-            <div>
-              <div class="flex flex-col">
-                <label for=""> Name </label>
-                <input class="border bg-light" type="text" />
-              </div>
-              <div class="flex flex-col">
-                <label for=""> Email </label>
-                <input class="border bg-light" type="text" />
-              </div>
-            </div>
-            <div class="flex flex-col">
-              <label for=""> Message </label>
-              <input class="border bg-light" type="text" />
-            </div>
-          </form>
-        </div>
-      </div>
+				<div class="max-w-6xl">
+					<p>Interested in working together? Send me a message!</p>
+					<form class="flex gap-4" action="">
+						<div>
+							<div class="flex flex-col">
+								<label for=""> Name </label>
+								<input class="border bg-light" type="text" />
+							</div>
+							<div class="flex flex-col">
+								<label for=""> Email </label>
+								<input class="border bg-light" type="text" />
+							</div>
+						</div>
+						<div class="flex flex-col">
+							<label for=""> Message </label>
+							<input class="border bg-light" type="text" />
+						</div>
+					</form>
+				</div>
+			</div>
 		</section>
 
-    <div class="flex justify-center">
-      <a href="#hero">Back to top</a>
-    </div>
+		<div class="flex justify-center">
+			<a href="#hero">Back to top</a>
+		</div>
 
 		<!-- footer -->
-		<footer class="flex flex-col text-center bg-dark text-light">
+		<footer class="flex flex-col bg-dark text-center text-light">
 			<div>
 				<a href="">Git</a>
 				<a href="">Email</a>
