fix navbar not always being on top

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		</div>
 
 		<!-- navbar -->
-		<header class="sticky top-0 bg-bg0">
+		<header class="sticky top-0 bg-bg0 z-10">
 			<nav class="flex items-center justify-between px-8 py-2">
 				<a href="#hero">
 					<img class="w-12" src="public/img/WhiteBeanLogo.svg" alt="logo" />
